[package]
name = "grainme_todo"
version = "0.0.1"
edition = "2021"
authors = ["Marouane <boufaroujmarouan@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.80"
home = "0.5.9"
serde_json = "1.0"    # Add serde_json.
structopt = "0.3"

[dependencies.chrono]
features = ["serde"]  # We're also going to need the serde feature for the chrono crate, so we can serialize the DateTime field.
version = "0.4"

[dependencies.serde]  # Add serde in its own section.
features = ["derive"] # We'll need the derive feature.
version = "1.0"
